# axum-maud

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/views/: index.rs  mod.rs
